--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@tanstack/react-query": "^5.90.5",
     "expo": "~54.0.13",
     "expo-constants": "~18.0.9",
     "expo-document-picker": "~14.0.7",
@@ -30,6 +31,8 @@
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.8",
     "jszip": "^3.10.1",
+    "ky": "^1.12.0",
+    "lucide-react-native": "^0.546.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
